# Facul

./: .gitignore  CONTEXTO_PROJETO.md  PASSO_A_PASSO_MANUAL.md  README.md  RELATORIO_FINAL.html  RELATORIO_FINAL.md  RELATORIO_FINAL_AUDITORIA.md  _analisar_pa.py  _busca_reset_pa.py  _explorar_pa_v2.py  _pa_endpoints_diretos.py  _pa_explorar_admin.py  _pa_html.py  _testar_login_pa.py  analisar_api.py  analisar_message_js.py  analise_apk.json  analise_apk.py  analise_apk_log.txt  analise_bundles.json  analise_bundles.py  analise_bundles_secrets.py  analise_profunda.py  analise_ws.json  analise_ws.py  analise_ws_log.txt  analise_ws_v2.json  analise_ws_v2.py  analise_ws_v2_log.txt  atacar_api_interna.py  auto_burp.py  auto_burp_resultados.json  auto_burp_resultados.md  auto_burp_v2.py  auto_burp_v2_resultados.json  auto_burp_v2_resultados.md  auto_burp_v3.py  auto_burp_v3_resultados.json  auto_burp_v3_resultados.md  brute_e_registro.py  (+81 more)
bundles/: ds.amizade777.com_index-legacy.ef78d3e0.js  ds.amizade777.com_index.76929613.js  ds.amizade777.com_index.f6ea575c.css  ds.amizade777.com_main.js  ds.amizade777.com_manifest.json  ds.amizade777.com_message.js  ds.amizade777.com_polyfills-legacy.c88b29ae.js  ds.rainha777slots.com_finger_1.0.0.js  ds.rainha777slots.com_index-legacy.b67df586.js  ds.rainha777slots.com_index.6665dae8.js  ds.rainha777slots.com_index.d93e3276.css  ds.rainha777slots.com_manifest.json  ds.rainha777slots.com_polyfills-legacy.e940345d.js  m.amizade777.com_index-7a797002.css  m.amizade777.com_index-e7dd841c.js  m.amizade777.com_index-legacy-3828497c.js  (+15 more)
(+143 files in other folders)
